// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxField controlLabel snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <form
      class="sc-bdvvaa nNUGj"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jUPATD"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="tos"
              >
                Terms of service
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ktlgjz"
                >
                  <label
                    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cQEWce"
                    for="tos"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 itMSJI StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
                    >
                      <input
                        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 gXyGmK"
                        id="tos"
                        name="tos"
                        type="checkbox"
                      />
                      <div
                        class="StyledBox-sc-13pk1d4-0 iCZFPP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 eNpbdq"
                      />
                    </div>
                    <span
                      class="StyledText-sc-1sadyjn-0 jbskW"
                    >
                      Terms of service
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kspWmI"
            >
              <button
                class="StyledButton-sc-323bzc-0 cfaKOi"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`CheckBoxField inField snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <form
      class="sc-bdvvaa nNUGj"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jUPATD"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 ktlgjz"
            >
              <label
                class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cQEWce"
                for="tos"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 itMSJI StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
                >
                  <input
                    class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 gXyGmK"
                    id="tos"
                    name="tos"
                    type="checkbox"
                  />
                  <div
                    class="StyledBox-sc-13pk1d4-0 iCZFPP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 eNpbdq"
                  />
                </div>
                <span>
                  Terms of service
                </span>
              </label>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kspWmI"
            >
              <button
                class="StyledButton-sc-323bzc-0 cfaKOi"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`CheckBoxField main snapshot 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <form
      class="sc-bdvvaa nNUGj"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jUPATD"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 eyhXU FormField__FormFieldBox-m9hood-0 gWgpjB"
            >
              <label
                class="StyledText-sc-1sadyjn-0 japRIL"
                for="tos"
              >
                Terms of service
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 ijhmMK FormField__FormFieldContentBox-m9hood-1"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 ktlgjz"
                >
                  <label
                    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cQEWce"
                    for="tos"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 jKFhht StyledCheckBox-sc-1dbk5ju-6 fJLUFg"
                    >
                      <input
                        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 gXyGmK"
                        id="tos"
                        name="tos"
                        type="checkbox"
                      />
                      <div
                        class="StyledBox-sc-13pk1d4-0 iCZFPP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 eNpbdq"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 kspWmI"
            >
              <button
                class="StyledButton-sc-323bzc-0 cfaKOi"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
